<resources>
    <string name="app_name">FiveMaps</string>
    <string name="explorar">Explorar</string>
    <string name="ir">Ir</string>
    <string name="visitados">Visitados</string>

    <string name="ubicación">Ubicación</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="localizar">Localizar</string>
    <string name="title_activity_maps">Map</string>
    <string name="volver">Volver</string>

    <string name="normal">Normal</string>
    <string name="hibrido">Hibrido</string>
    <string name="satelital">Satelital</string>
    <string name="terreno">De terreno</string>
    <string name="ninguno">Ninguno</string>

    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="information">Información</string>


</resources>