<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MapsActivity">

    <item
        android:id="@+id/ninguno"
        android:title="@string/ninguno"
        app:showAsAction="never" />

    <item
        android:id="@+id/normal"
        android:title="@string/normal"
        app:showAsAction="never" />

    <item
        android:id="@+id/satelital"
        android:title="@string/satelital"
        app:showAsAction="never" />

    <item
        android:id="@+id/terreno"
        android:title="@string/terreno"
        app:showAsAction="never" />

    <item
        android:id="@+id/hibrido"
        android:title="@string/hibrido"
        app:showAsAction="never" />
</menu>